# easyocr-cli

./: README.md  pyproject.toml
easyocr_cli/: __main__.py  languages.py
