[tool.poetry]
name = "easyocr-cli"
version = "0.1.0"
description = "An alternative CLI program to interact with EasyOCR library"
authors = ["Brian Wo <45139213+brainwo@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "easyocr_cli"}]

[tool.poetry.dependencies]
python = "^3.10"
easyocr = "^1.6.2"


[tool.poetry.group.dev.dependencies]
autopep8 = "^1.7.0"
flake8 = "^5.0.4"
ruff = "^0.0.84"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
